# utt-ai-arena

./: README.md  pyproject.toml  todo.txt
scripts/: train_dqn.py  train_qlearning.py
src/: board.py  dqn_model.py  main.py  player.py
utt-ai-arena/: board.py  main.py  player.py
